# Progetto-InfoGrafica

./: .gitignore  CMakeLists.txt  ProgettoInformaticaGrafica.sln  README.md
Linking/include/glad/: glad.h
Linking/lib/freetype/: freetype.lib
ProgettoinformaticaGrafica/: ProgettoInformaticaGrafica.vcxproj  ProgettoInformaticaGrafica.vcxproj.filters  imgui.ini  leaderboard.txt
ProgettoinformaticaGrafica/assets/models/book/: Book.mtl  books.mtl
ProgettoinformaticaGrafica/assets/models/client/: client.mtl
ProgettoinformaticaGrafica/assets/models/glass/: glass.mtl
ProgettoinformaticaGrafica/assets/models/room/: room.mtl
ProgettoinformaticaGrafica/assets/models/waiter/: waiter.mtl
ProgettoinformaticaGrafica/assets/shaders/: box_vs.glsl  core_vs.glsl  glyph_fs.glsl  glyph_vs.glsl  instanced_vs.glsl
ProgettoinformaticaGrafica/src/: main.cpp
ProgettoinformaticaGrafica/src/algorithms/: bounds.cpp  bounds.h  durationlogger.cpp  durationlogger.h  list.hpp  states.hpp  trie.hpp
ProgettoinformaticaGrafica/src/entities/: client.cpp  client.h  enemy.cpp  enemy.h  entitybase.cpp  entitybase.h  glass.cpp  glass.h  player.cpp  player.h
ProgettoinformaticaGrafica/src/graphics/: glmemory.hpp  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h
ProgettoinformaticaGrafica/src/graphics/models/: box.hpp  cube.hpp  lamp.hpp  plane.hpp  sphere.hpp
ProgettoinformaticaGrafica/src/images/: sprite.cpp  sprite.h
ProgettoinformaticaGrafica/src/io/: camera.cpp  camera.h  joystick.cpp  joystick.h  mouse.cpp  mouse.h
ProgettoinformaticaGrafica/src/physics/: rigidbody.cpp  rigidbody.h
ProgettoinformaticaGrafica/src/scenes/: basescene - Copia.cpp  basescene - Copia.h  basescene.cpp  basescene.h  menu.cpp  menu.h  scene.cpp  scene.h  title.cpp  title.h
