cmake_minimum_required(VERSION 3.17)
project(ProgettoInformaticaGrafica)

set(CMAKE_CXX_STANDARD 14)

include_directories(Linking/include)
include_directories(Linking/include/assimp)
include_directories(Linking/include/assimp/Compiler)
include_directories(Linking/include/assimp/port)
include_directories(Linking/include/assimp/port/AndroidJNI)
include_directories(Linking/include/freetype)
include_directories(Linking/include/freetype/config)
include_directories(Linking/include/freetype/internal)
include_directories(Linking/include/freetype/internal/services)
include_directories(Linking/include/glad)
include_directories(Linking/include/GLFW)
include_directories(Linking/include/glm)
include_directories(Linking/include/glm/detail)
include_directories(Linking/include/glm/ext)
include_directories(Linking/include/glm/gtc)
include_directories(Linking/include/glm/gtx)
include_directories(Linking/include/glm/simd)
include_directories(Linking/include/KHR)
include_directories(Linking/include/stb)
include_directories(ProgettoInformaticaGrafica/src)
include_directories(ProgettoInformaticaGrafica/src/algorithms)
include_directories(ProgettoInformaticaGrafica/src/entities)
include_directories(ProgettoInformaticaGrafica/src/graphics)
include_directories(ProgettoInformaticaGrafica/src/graphics/models)
include_directories(ProgettoInformaticaGrafica/src/imgui)
include_directories(ProgettoInformaticaGrafica/src/io)
include_directories(ProgettoInformaticaGrafica/src/physics)
include_directories(ProgettoInformaticaGrafica/src/scenes)

include_directories(Linking/lib)
include_directories(Linking/lib/GLFW)
include_directories(Linking/lib/freetype)

target_link_libraries(Linking/lib/freetype/freetype.lib
        Linking/lib/assimp/assimp-vc142-mtd.lib
        Linking/lib/GLFW/glfw3.lib
        Linking/lib/opengl32.lib)

add_executable(ProgettoInformaticaGrafica
        Linking/include/assimp/Compiler/poppack1.h
        Linking/include/assimp/Compiler/pstdint.h
        Linking/include/assimp/Compiler/pushpack1.h
        Linking/include/assimp/port/AndroidJNI/AndroidJNIIOSystem.h
        Linking/include/assimp/aabb.h
        Linking/include/assimp/ai_assert.h
        Linking/include/assimp/anim.h
        Linking/include/assimp/BaseImporter.h
        Linking/include/assimp/Bitmap.h
        Linking/include/assimp/BlobIOSystem.h
        Linking/include/assimp/ByteSwapper.h
        Linking/include/assimp/camera.h
        Linking/include/assimp/cexport.h
        Linking/include/assimp/cfileio.h
        Linking/include/assimp/cimport.h
        Linking/include/assimp/color4.h
        Linking/include/assimp/color4.inl
        Linking/include/assimp/config.h
        Linking/include/assimp/CreateAnimMesh.h
        Linking/include/assimp/DefaultIOStream.h
        Linking/include/assimp/DefaultIOSystem.h
        Linking/include/assimp/DefaultLogger.hpp
        Linking/include/assimp/Defines.h
        Linking/include/assimp/defs.h
        Linking/include/assimp/Exceptional.h
        Linking/include/assimp/Exporter.hpp
        Linking/include/assimp/fast_atof.h
        Linking/include/assimp/GenericProperty.h
        Linking/include/assimp/Hash.h
        Linking/include/assimp/Importer.hpp
        Linking/include/assimp/importerdesc.h
        Linking/include/assimp/IOStream.hpp
        Linking/include/assimp/IOStreamBuffer.h
        Linking/include/assimp/IOSystem.hpp
        Linking/include/assimp/irrXMLWrapper.h
        Linking/include/assimp/light.h
        Linking/include/assimp/LineSplitter.h
        Linking/include/assimp/LogAux.h
        Linking/include/assimp/Logger.hpp
        Linking/include/assimp/LogStream.hpp
        Linking/include/assimp/Macros.h
        Linking/include/assimp/material.h
        Linking/include/assimp/material.inl
        Linking/include/assimp/MathFunctions.h
        Linking/include/assimp/matrix3x3.h
        Linking/include/assimp/matrix3x3.inl
        Linking/include/assimp/matrix4x4.h
        Linking/include/assimp/matrix4x4.inl
        Linking/include/assimp/MemoryIOWrapper.h
        Linking/include/assimp/mesh.h
        Linking/include/assimp/metadata.h
        Linking/include/assimp/NullLogger.hpp
        Linking/include/assimp/ParsingUtils.h
        Linking/include/assimp/pbrmaterial.h
        Linking/include/assimp/postprocess.h
        Linking/include/assimp/Profiler.h
        Linking/include/assimp/ProgressHandler.hpp
        Linking/include/assimp/qnan.h
        Linking/include/assimp/quaternion.h
        Linking/include/assimp/quaternion.inl
        Linking/include/assimp/RemoveComments.h
        Linking/include/assimp/scene.h
        Linking/include/assimp/SceneCombiner.h
        Linking/include/assimp/SGSpatialSort.h
        Linking/include/assimp/SkeletonMeshBuilder.h
        Linking/include/assimp/SmoothingGroups.h
        Linking/include/assimp/SmoothingGroups.inl
        Linking/include/assimp/SpatialSort.h
        Linking/include/assimp/StandardShapes.h
        Linking/include/assimp/StreamReader.h
        Linking/include/assimp/StreamWriter.h
        Linking/include/assimp/StringComparison.h
        Linking/include/assimp/StringUtils.h
        Linking/include/assimp/Subdivision.h
        Linking/include/assimp/texture.h
        Linking/include/assimp/TinyFormatter.h
        Linking/include/assimp/types.h
        Linking/include/assimp/vector2.h
        Linking/include/assimp/vector2.inl
        Linking/include/assimp/vector3.h
        Linking/include/assimp/vector3.inl
        Linking/include/assimp/version.h
        Linking/include/assimp/Vertex.h
        Linking/include/assimp/XMLTools.h
        Linking/include/assimp/ZipArchiveIOSystem.h
        Linking/include/freetype/config/ftconfig.h
        Linking/include/freetype/config/ftheader.h
        Linking/include/freetype/config/ftmodule.h
        Linking/include/freetype/config/ftoption.h
        Linking/include/freetype/config/ftstdlib.h
        Linking/include/freetype/config/integer-types.h
        Linking/include/freetype/config/mac-support.h
        Linking/include/freetype/config/public-macros.h
        Linking/include/freetype/internal/services/svbdf.h
        Linking/include/freetype/internal/services/svcfftl.h
        Linking/include/freetype/internal/services/svcid.h
        Linking/include/freetype/internal/services/svfntfmt.h
        Linking/include/freetype/internal/services/svgldict.h
        Linking/include/freetype/internal/services/svgxval.h
        Linking/include/freetype/internal/services/svkern.h
        Linking/include/freetype/internal/services/svmetric.h
        Linking/include/freetype/internal/services/svmm.h
        Linking/include/freetype/internal/services/svotval.h
        Linking/include/freetype/internal/services/svpfr.h
        Linking/include/freetype/internal/services/svpostnm.h
        Linking/include/freetype/internal/services/svprop.h
        Linking/include/freetype/internal/services/svpscmap.h
        Linking/include/freetype/internal/services/svpsinfo.h
        Linking/include/freetype/internal/services/svsfnt.h
        Linking/include/freetype/internal/services/svttcmap.h
        Linking/include/freetype/internal/services/svtteng.h
        Linking/include/freetype/internal/services/svttglyf.h
        Linking/include/freetype/internal/services/svwinfnt.h
        Linking/include/freetype/internal/autohint.h
        Linking/include/freetype/internal/cffotypes.h
        Linking/include/freetype/internal/cfftypes.h
        Linking/include/freetype/internal/compiler-macros.h
        Linking/include/freetype/internal/ftcalc.h
        Linking/include/freetype/internal/ftdebug.h
        Linking/include/freetype/internal/ftdrv.h
        Linking/include/freetype/internal/ftgloadr.h
        Linking/include/freetype/internal/fthash.h
        Linking/include/freetype/internal/ftmemory.h
        Linking/include/freetype/internal/ftobjs.h
        Linking/include/freetype/internal/ftpsprop.h
        Linking/include/freetype/internal/ftrfork.h
        Linking/include/freetype/internal/ftserv.h
        Linking/include/freetype/internal/ftstream.h
        Linking/include/freetype/internal/fttrace.h
        Linking/include/freetype/internal/ftvalid.h
        Linking/include/freetype/internal/psaux.h
        Linking/include/freetype/internal/pshints.h
        Linking/include/freetype/internal/sfnt.h
        Linking/include/freetype/internal/t1types.h
        Linking/include/freetype/internal/tttypes.h
        Linking/include/freetype/internal/wofftypes.h
        Linking/include/freetype/freetype.h
        Linking/include/freetype/ftadvanc.h
        Linking/include/freetype/ftbbox.h
        Linking/include/freetype/ftbdf.h
        Linking/include/freetype/ftbitmap.h
        Linking/include/freetype/ftbzip2.h
        Linking/include/freetype/ftcache.h
        Linking/include/freetype/ftchapters.h
        Linking/include/freetype/ftcid.h
        Linking/include/freetype/ftcolor.h
        Linking/include/freetype/ftdriver.h
        Linking/include/freetype/fterrdef.h
        Linking/include/freetype/fterrors.h
        Linking/include/freetype/ftfntfmt.h
        Linking/include/freetype/ftgasp.h
        Linking/include/freetype/ftglyph.h
        Linking/include/freetype/ftgxval.h
        Linking/include/freetype/ftgzip.h
        Linking/include/freetype/ftimage.h
        Linking/include/freetype/ftincrem.h
        Linking/include/freetype/ftlcdfil.h
        Linking/include/freetype/ftlist.h
        Linking/include/freetype/ftlzw.h
        Linking/include/freetype/ftmac.h
        Linking/include/freetype/ftmm.h
        Linking/include/freetype/ftmodapi.h
        Linking/include/freetype/ftmoderr.h
        Linking/include/freetype/ftotval.h
        Linking/include/freetype/ftoutln.h
        Linking/include/freetype/ftparams.h
        Linking/include/freetype/ftpfr.h
        Linking/include/freetype/ftrender.h
        Linking/include/freetype/ftsizes.h
        Linking/include/freetype/ftsnames.h
        Linking/include/freetype/ftstroke.h
        Linking/include/freetype/ftsynth.h
        Linking/include/freetype/ftsystem.h
        Linking/include/freetype/fttrigon.h
        Linking/include/freetype/fttypes.h
        Linking/include/freetype/ftwinfnt.h
        Linking/include/freetype/t1tables.h
        Linking/include/freetype/ttnameid.h
        Linking/include/freetype/tttables.h
        Linking/include/freetype/tttags.h
        Linking/include/glad/glad.h
        Linking/include/GLFW/glfw3.h
        Linking/include/GLFW/glfw3native.h
        Linking/include/glm/detail/_features.hpp
        Linking/include/glm/detail/_fixes.hpp
        Linking/include/glm/detail/_noise.hpp
        Linking/include/glm/detail/_swizzle.hpp
        Linking/include/glm/detail/_swizzle_func.hpp
        Linking/include/glm/detail/_vectorize.hpp
        Linking/include/glm/detail/compute_common.hpp
        Linking/include/glm/detail/compute_vector_relational.hpp
        Linking/include/glm/detail/func_common.inl
        Linking/include/glm/detail/func_common_simd.inl
        Linking/include/glm/detail/func_exponential.inl
        Linking/include/glm/detail/func_exponential_simd.inl
        Linking/include/glm/detail/func_geometric.inl
        Linking/include/glm/detail/func_geometric_simd.inl
        Linking/include/glm/detail/func_integer.inl
        Linking/include/glm/detail/func_integer_simd.inl
        Linking/include/glm/detail/func_matrix.inl
        Linking/include/glm/detail/func_matrix_simd.inl
        Linking/include/glm/detail/func_packing.inl
        Linking/include/glm/detail/func_packing_simd.inl
        Linking/include/glm/detail/func_trigonometric.inl
        Linking/include/glm/detail/func_trigonometric_simd.inl
        Linking/include/glm/detail/func_vector_relational.inl
        Linking/include/glm/detail/func_vector_relational_simd.inl
        Linking/include/glm/detail/glm.cpp
        Linking/include/glm/detail/qualifier.hpp
        Linking/include/glm/detail/setup.hpp
        Linking/include/glm/detail/type_float.hpp
        Linking/include/glm/detail/type_half.hpp
        Linking/include/glm/detail/type_half.inl
        Linking/include/glm/detail/type_mat2x2.hpp
        Linking/include/glm/detail/type_mat2x2.inl
        Linking/include/glm/detail/type_mat2x3.hpp
        Linking/include/glm/detail/type_mat2x3.inl
        Linking/include/glm/detail/type_mat2x4.hpp
        Linking/include/glm/detail/type_mat2x4.inl
        Linking/include/glm/detail/type_mat3x2.hpp
        Linking/include/glm/detail/type_mat3x2.inl
        Linking/include/glm/detail/type_mat3x3.hpp
        Linking/include/glm/detail/type_mat3x3.inl
        Linking/include/glm/detail/type_mat3x4.hpp
        Linking/include/glm/detail/type_mat3x4.inl
        Linking/include/glm/detail/type_mat4x2.hpp
        Linking/include/glm/detail/type_mat4x2.inl
        Linking/include/glm/detail/type_mat4x3.hpp
        Linking/include/glm/detail/type_mat4x3.inl
        Linking/include/glm/detail/type_mat4x4.hpp
        Linking/include/glm/detail/type_mat4x4.inl
        Linking/include/glm/detail/type_mat4x4_simd.inl
        Linking/include/glm/detail/type_quat.hpp
        Linking/include/glm/detail/type_quat.inl
        Linking/include/glm/detail/type_quat_simd.inl
        Linking/include/glm/detail/type_vec1.hpp
        Linking/include/glm/detail/type_vec1.inl
        Linking/include/glm/detail/type_vec2.hpp
        Linking/include/glm/detail/type_vec2.inl
        Linking/include/glm/detail/type_vec3.hpp
        Linking/include/glm/detail/type_vec3.inl
        Linking/include/glm/detail/type_vec4.hpp
        Linking/include/glm/detail/type_vec4.inl
        Linking/include/glm/detail/type_vec4_simd.inl
        Linking/include/glm/ext/matrix_clip_space.hpp
        Linking/include/glm/ext/matrix_clip_space.inl
        Linking/include/glm/ext/matrix_common.hpp
        Linking/include/glm/ext/matrix_common.inl
        Linking/include/glm/ext/matrix_double2x2.hpp
        Linking/include/glm/ext/matrix_double2x2_precision.hpp
        Linking/include/glm/ext/matrix_double2x3.hpp
        Linking/include/glm/ext/matrix_double2x3_precision.hpp
        Linking/include/glm/ext/matrix_double2x4.hpp
        Linking/include/glm/ext/matrix_double2x4_precision.hpp
        Linking/include/glm/ext/matrix_double3x2.hpp
        Linking/include/glm/ext/matrix_double3x2_precision.hpp
        Linking/include/glm/ext/matrix_double3x3.hpp
        Linking/include/glm/ext/matrix_double3x3_precision.hpp
        Linking/include/glm/ext/matrix_double3x4.hpp
        Linking/include/glm/ext/matrix_double3x4_precision.hpp
        Linking/include/glm/ext/matrix_double4x2.hpp
        Linking/include/glm/ext/matrix_double4x2_precision.hpp
        Linking/include/glm/ext/matrix_double4x3.hpp
        Linking/include/glm/ext/matrix_double4x3_precision.hpp
        Linking/include/glm/ext/matrix_double4x4.hpp
        Linking/include/glm/ext/matrix_double4x4_precision.hpp
        Linking/include/glm/ext/matrix_float2x2.hpp
        Linking/include/glm/ext/matrix_float2x2_precision.hpp
        Linking/include/glm/ext/matrix_float2x3.hpp
        Linking/include/glm/ext/matrix_float2x3_precision.hpp
        Linking/include/glm/ext/matrix_float2x4.hpp
        Linking/include/glm/ext/matrix_float2x4_precision.hpp
        Linking/include/glm/ext/matrix_float3x2.hpp
        Linking/include/glm/ext/matrix_float3x2_precision.hpp
        Linking/include/glm/ext/matrix_float3x3.hpp
        Linking/include/glm/ext/matrix_float3x3_precision.hpp
        Linking/include/glm/ext/matrix_float3x4.hpp
        Linking/include/glm/ext/matrix_float3x4_precision.hpp
        Linking/include/glm/ext/matrix_float4x2.hpp
        Linking/include/glm/ext/matrix_float4x2_precision.hpp
        Linking/include/glm/ext/matrix_float4x3.hpp
        Linking/include/glm/ext/matrix_float4x3_precision.hpp
        Linking/include/glm/ext/matrix_float4x4.hpp
        Linking/include/glm/ext/matrix_float4x4_precision.hpp
        Linking/include/glm/ext/matrix_int2x2.hpp
        Linking/include/glm/ext/matrix_int2x2_sized.hpp
        Linking/include/glm/ext/matrix_int2x3.hpp
        Linking/include/glm/ext/matrix_int2x3_sized.hpp
        Linking/include/glm/ext/matrix_int2x4.hpp
        Linking/include/glm/ext/matrix_int2x4_sized.hpp
        Linking/include/glm/ext/matrix_int3x2.hpp
        Linking/include/glm/ext/matrix_int3x2_sized.hpp
        Linking/include/glm/ext/matrix_int3x3.hpp
        Linking/include/glm/ext/matrix_int3x3_sized.hpp
        Linking/include/glm/ext/matrix_int3x4.hpp
        Linking/include/glm/ext/matrix_int3x4_sized.hpp
        Linking/include/glm/ext/matrix_int4x2.hpp
        Linking/include/glm/ext/matrix_int4x2_sized.hpp
        Linking/include/glm/ext/matrix_int4x3.hpp
        Linking/include/glm/ext/matrix_int4x3_sized.hpp
        Linking/include/glm/ext/matrix_int4x4.hpp
        Linking/include/glm/ext/matrix_int4x4_sized.hpp
        Linking/include/glm/ext/matrix_projection.hpp
        Linking/include/glm/ext/matrix_projection.inl
        Linking/include/glm/ext/matrix_relational.hpp
        Linking/include/glm/ext/matrix_relational.inl
        Linking/include/glm/ext/matrix_transform.hpp
        Linking/include/glm/ext/matrix_transform.inl
        Linking/include/glm/ext/matrix_uint2x2.hpp
        Linking/include/glm/ext/matrix_uint2x2_sized.hpp
        Linking/include/glm/ext/matrix_uint2x3.hpp
        Linking/include/glm/ext/matrix_uint2x3_sized.hpp
        Linking/include/glm/ext/matrix_uint2x4.hpp
        Linking/include/glm/ext/matrix_uint2x4_sized.hpp
        Linking/include/glm/ext/matrix_uint3x2.hpp
        Linking/include/glm/ext/matrix_uint3x2_sized.hpp
        Linking/include/glm/ext/matrix_uint3x3.hpp
        Linking/include/glm/ext/matrix_uint3x3_sized.hpp
        Linking/include/glm/ext/matrix_uint3x4.hpp
        Linking/include/glm/ext/matrix_uint3x4_sized.hpp
        Linking/include/glm/ext/matrix_uint4x2.hpp
        Linking/include/glm/ext/matrix_uint4x2_sized.hpp
        Linking/include/glm/ext/matrix_uint4x3.hpp
        Linking/include/glm/ext/matrix_uint4x3_sized.hpp
        Linking/include/glm/ext/matrix_uint4x4.hpp
        Linking/include/glm/ext/matrix_uint4x4_sized.hpp
        Linking/include/glm/ext/quaternion_common.hpp
        Linking/include/glm/ext/quaternion_common.inl
        Linking/include/glm/ext/quaternion_common_simd.inl
        Linking/include/glm/ext/quaternion_double.hpp
        Linking/include/glm/ext/quaternion_double_precision.hpp
        Linking/include/glm/ext/quaternion_exponential.hpp
        Linking/include/glm/ext/quaternion_exponential.inl
        Linking/include/glm/ext/quaternion_float.hpp
        Linking/include/glm/ext/quaternion_float_precision.hpp
        Linking/include/glm/ext/quaternion_geometric.hpp
        Linking/include/glm/ext/quaternion_geometric.inl
        Linking/include/glm/ext/quaternion_relational.hpp
        Linking/include/glm/ext/quaternion_relational.inl
        Linking/include/glm/ext/quaternion_transform.hpp
        Linking/include/glm/ext/quaternion_transform.inl
        Linking/include/glm/ext/quaternion_trigonometric.hpp
        Linking/include/glm/ext/quaternion_trigonometric.inl
        Linking/include/glm/ext/scalar_common.hpp
        Linking/include/glm/ext/scalar_common.inl
        Linking/include/glm/ext/scalar_constants.hpp
        Linking/include/glm/ext/scalar_constants.inl
        Linking/include/glm/ext/scalar_int_sized.hpp
        Linking/include/glm/ext/scalar_integer.hpp
        Linking/include/glm/ext/scalar_integer.inl
        Linking/include/glm/ext/scalar_packing.hpp
        Linking/include/glm/ext/scalar_packing.inl
        Linking/include/glm/ext/scalar_relational.hpp
        Linking/include/glm/ext/scalar_relational.inl
        Linking/include/glm/ext/scalar_uint_sized.hpp
        Linking/include/glm/ext/scalar_ulp.hpp
        Linking/include/glm/ext/scalar_ulp.inl
        Linking/include/glm/ext/vector_bool1.hpp
        Linking/include/glm/ext/vector_bool1_precision.hpp
        Linking/include/glm/ext/vector_bool2.hpp
        Linking/include/glm/ext/vector_bool2_precision.hpp
        Linking/include/glm/ext/vector_bool3.hpp
        Linking/include/glm/ext/vector_bool3_precision.hpp
        Linking/include/glm/ext/vector_bool4.hpp
        Linking/include/glm/ext/vector_bool4_precision.hpp
        Linking/include/glm/ext/vector_common.hpp
        Linking/include/glm/ext/vector_common.inl
        Linking/include/glm/ext/vector_double1.hpp
        Linking/include/glm/ext/vector_double1_precision.hpp
        Linking/include/glm/ext/vector_double2.hpp
        Linking/include/glm/ext/vector_double2_precision.hpp
        Linking/include/glm/ext/vector_double3.hpp
        Linking/include/glm/ext/vector_double3_precision.hpp
        Linking/include/glm/ext/vector_double4.hpp
        Linking/include/glm/ext/vector_double4_precision.hpp
        Linking/include/glm/ext/vector_float1.hpp
        Linking/include/glm/ext/vector_float1_precision.hpp
        Linking/include/glm/ext/vector_float2.hpp
        Linking/include/glm/ext/vector_float2_precision.hpp
        Linking/include/glm/ext/vector_float3.hpp
        Linking/include/glm/ext/vector_float3_precision.hpp
        Linking/include/glm/ext/vector_float4.hpp
        Linking/include/glm/ext/vector_float4_precision.hpp
        Linking/include/glm/ext/vector_int1.hpp
        Linking/include/glm/ext/vector_int1_sized.hpp
        Linking/include/glm/ext/vector_int2.hpp
        Linking/include/glm/ext/vector_int2_sized.hpp
        Linking/include/glm/ext/vector_int3.hpp
        Linking/include/glm/ext/vector_int3_sized.hpp
        Linking/include/glm/ext/vector_int4.hpp
        Linking/include/glm/ext/vector_int4_sized.hpp
        Linking/include/glm/ext/vector_integer.hpp
        Linking/include/glm/ext/vector_integer.inl
        Linking/include/glm/ext/vector_packing.hpp
        Linking/include/glm/ext/vector_packing.inl
        Linking/include/glm/ext/vector_relational.hpp
        Linking/include/glm/ext/vector_relational.inl
        Linking/include/glm/ext/vector_uint1.hpp
        Linking/include/glm/ext/vector_uint1_sized.hpp
        Linking/include/glm/ext/vector_uint2.hpp
        Linking/include/glm/ext/vector_uint2_sized.hpp
        Linking/include/glm/ext/vector_uint3.hpp
        Linking/include/glm/ext/vector_uint3_sized.hpp
        Linking/include/glm/ext/vector_uint4.hpp
        Linking/include/glm/ext/vector_uint4_sized.hpp
        Linking/include/glm/ext/vector_ulp.hpp
        Linking/include/glm/ext/vector_ulp.inl
        Linking/include/glm/gtc/bitfield.hpp
        Linking/include/glm/gtc/bitfield.inl
        Linking/include/glm/gtc/color_space.hpp
        Linking/include/glm/gtc/color_space.inl
        Linking/include/glm/gtc/constants.hpp
        Linking/include/glm/gtc/constants.inl
        Linking/include/glm/gtc/epsilon.hpp
        Linking/include/glm/gtc/epsilon.inl
        Linking/include/glm/gtc/integer.hpp
        Linking/include/glm/gtc/integer.inl
        Linking/include/glm/gtc/matrix_access.hpp
        Linking/include/glm/gtc/matrix_access.inl
        Linking/include/glm/gtc/matrix_integer.hpp
        Linking/include/glm/gtc/matrix_inverse.hpp
        Linking/include/glm/gtc/matrix_inverse.inl
        Linking/include/glm/gtc/matrix_transform.hpp
        Linking/include/glm/gtc/matrix_transform.inl
        Linking/include/glm/gtc/noise.hpp
        Linking/include/glm/gtc/noise.inl
        Linking/include/glm/gtc/packing.hpp
        Linking/include/glm/gtc/packing.inl
        Linking/include/glm/gtc/quaternion.hpp
        Linking/include/glm/gtc/quaternion.inl
        Linking/include/glm/gtc/quaternion_simd.inl
        Linking/include/glm/gtc/random.hpp
        Linking/include/glm/gtc/random.inl
        Linking/include/glm/gtc/reciprocal.hpp
        Linking/include/glm/gtc/reciprocal.inl
        Linking/include/glm/gtc/round.hpp
        Linking/include/glm/gtc/round.inl
        Linking/include/glm/gtc/type_aligned.hpp
        Linking/include/glm/gtc/type_precision.hpp
        Linking/include/glm/gtc/type_precision.inl
        Linking/include/glm/gtc/type_ptr.hpp
        Linking/include/glm/gtc/type_ptr.inl
        Linking/include/glm/gtc/ulp.hpp
        Linking/include/glm/gtc/ulp.inl
        Linking/include/glm/gtc/vec1.hpp
        Linking/include/glm/gtx/associated_min_max.hpp
        Linking/include/glm/gtx/associated_min_max.inl
        Linking/include/glm/gtx/bit.hpp
        Linking/include/glm/gtx/bit.inl
        Linking/include/glm/gtx/closest_point.hpp
        Linking/include/glm/gtx/closest_point.inl
        Linking/include/glm/gtx/color_encoding.hpp
        Linking/include/glm/gtx/color_encoding.inl
        Linking/include/glm/gtx/color_space.hpp
        Linking/include/glm/gtx/color_space.inl
        Linking/include/glm/gtx/color_space_YCoCg.hpp
        Linking/include/glm/gtx/color_space_YCoCg.inl
        Linking/include/glm/gtx/common.hpp
        Linking/include/glm/gtx/common.inl
        Linking/include/glm/gtx/compatibility.hpp
        Linking/include/glm/gtx/compatibility.inl
        Linking/include/glm/gtx/component_wise.hpp
        Linking/include/glm/gtx/component_wise.inl
        Linking/include/glm/gtx/dual_quaternion.hpp
        Linking/include/glm/gtx/dual_quaternion.inl
        Linking/include/glm/gtx/easing.hpp
        Linking/include/glm/gtx/easing.inl
        Linking/include/glm/gtx/euler_angles.hpp
        Linking/include/glm/gtx/euler_angles.inl
        Linking/include/glm/gtx/extend.hpp
        Linking/include/glm/gtx/extend.inl
        Linking/include/glm/gtx/extended_min_max.hpp
        Linking/include/glm/gtx/extended_min_max.inl
        Linking/include/glm/gtx/exterior_product.hpp
        Linking/include/glm/gtx/exterior_product.inl
        Linking/include/glm/gtx/fast_exponential.hpp
        Linking/include/glm/gtx/fast_exponential.inl
        Linking/include/glm/gtx/fast_square_root.hpp
        Linking/include/glm/gtx/fast_square_root.inl
        Linking/include/glm/gtx/fast_trigonometry.hpp
        Linking/include/glm/gtx/fast_trigonometry.inl
        Linking/include/glm/gtx/float_notmalize.inl
        Linking/include/glm/gtx/functions.hpp
        Linking/include/glm/gtx/functions.inl
        Linking/include/glm/gtx/gradient_paint.hpp
        Linking/include/glm/gtx/gradient_paint.inl
        Linking/include/glm/gtx/handed_coordinate_space.hpp
        Linking/include/glm/gtx/handed_coordinate_space.inl
        Linking/include/glm/gtx/hash.hpp
        Linking/include/glm/gtx/hash.inl
        Linking/include/glm/gtx/integer.hpp
        Linking/include/glm/gtx/integer.inl
        Linking/include/glm/gtx/intersect.hpp
        Linking/include/glm/gtx/intersect.inl
        Linking/include/glm/gtx/io.hpp
        Linking/include/glm/gtx/io.inl
        Linking/include/glm/gtx/log_base.hpp
        Linking/include/glm/gtx/log_base.inl
        Linking/include/glm/gtx/matrix_cross_product.hpp
        Linking/include/glm/gtx/matrix_cross_product.inl
        Linking/include/glm/gtx/matrix_decompose.hpp
        Linking/include/glm/gtx/matrix_decompose.inl
        Linking/include/glm/gtx/matrix_factorisation.hpp
        Linking/include/glm/gtx/matrix_factorisation.inl
        Linking/include/glm/gtx/matrix_interpolation.hpp
        Linking/include/glm/gtx/matrix_interpolation.inl
        Linking/include/glm/gtx/matrix_major_storage.hpp
        Linking/include/glm/gtx/matrix_major_storage.inl
        Linking/include/glm/gtx/matrix_operation.hpp
        Linking/include/glm/gtx/matrix_operation.inl
        Linking/include/glm/gtx/matrix_query.hpp
        Linking/include/glm/gtx/matrix_query.inl
        Linking/include/glm/gtx/matrix_transform_2d.hpp
        Linking/include/glm/gtx/matrix_transform_2d.inl
        Linking/include/glm/gtx/mixed_product.hpp
        Linking/include/glm/gtx/mixed_product.inl
        Linking/include/glm/gtx/norm.hpp
        Linking/include/glm/gtx/norm.inl
        Linking/include/glm/gtx/normal.hpp
        Linking/include/glm/gtx/normal.inl
        Linking/include/glm/gtx/normalize_dot.hpp
        Linking/include/glm/gtx/normalize_dot.inl
        Linking/include/glm/gtx/number_precision.hpp
        Linking/include/glm/gtx/number_precision.inl
        Linking/include/glm/gtx/optimum_pow.hpp
        Linking/include/glm/gtx/optimum_pow.inl
        Linking/include/glm/gtx/orthonormalize.hpp
        Linking/include/glm/gtx/orthonormalize.inl
        Linking/include/glm/gtx/perpendicular.hpp
        Linking/include/glm/gtx/perpendicular.inl
        Linking/include/glm/gtx/polar_coordinates.hpp
        Linking/include/glm/gtx/polar_coordinates.inl
        Linking/include/glm/gtx/projection.hpp
        Linking/include/glm/gtx/projection.inl
        Linking/include/glm/gtx/quaternion.hpp
        Linking/include/glm/gtx/quaternion.inl
        Linking/include/glm/gtx/range.hpp
        Linking/include/glm/gtx/raw_data.hpp
        Linking/include/glm/gtx/raw_data.inl
        Linking/include/glm/gtx/rotate_normalized_axis.hpp
        Linking/include/glm/gtx/rotate_normalized_axis.inl
        Linking/include/glm/gtx/rotate_vector.hpp
        Linking/include/glm/gtx/rotate_vector.inl
        Linking/include/glm/gtx/scalar_multiplication.hpp
        Linking/include/glm/gtx/scalar_relational.hpp
        Linking/include/glm/gtx/scalar_relational.inl
        Linking/include/glm/gtx/spline.hpp
        Linking/include/glm/gtx/spline.inl
        Linking/include/glm/gtx/std_based_type.hpp
        Linking/include/glm/gtx/std_based_type.inl
        Linking/include/glm/gtx/string_cast.hpp
        Linking/include/glm/gtx/string_cast.inl
        Linking/include/glm/gtx/texture.hpp
        Linking/include/glm/gtx/texture.inl
        Linking/include/glm/gtx/transform.hpp
        Linking/include/glm/gtx/transform.inl
        Linking/include/glm/gtx/transform2.hpp
        Linking/include/glm/gtx/transform2.inl
        Linking/include/glm/gtx/type_aligned.hpp
        Linking/include/glm/gtx/type_aligned.inl
        Linking/include/glm/gtx/type_trait.hpp
        Linking/include/glm/gtx/type_trait.inl
        Linking/include/glm/gtx/vec_swizzle.hpp
        Linking/include/glm/gtx/vector_angle.hpp
        Linking/include/glm/gtx/vector_angle.inl
        Linking/include/glm/gtx/vector_query.hpp
        Linking/include/glm/gtx/vector_query.inl
        Linking/include/glm/gtx/wrap.hpp
        Linking/include/glm/gtx/wrap.inl
        Linking/include/glm/simd/common.h
        Linking/include/glm/simd/exponential.h
        Linking/include/glm/simd/geometric.h
        Linking/include/glm/simd/integer.h
        Linking/include/glm/simd/matrix.h
        Linking/include/glm/simd/neon.h
        Linking/include/glm/simd/packing.h
        Linking/include/glm/simd/platform.h
        Linking/include/glm/simd/trigonometric.h
        Linking/include/glm/simd/vector_relational.h
        Linking/include/glm/common.hpp
        Linking/include/glm/exponential.hpp
        Linking/include/glm/ext.hpp
        Linking/include/glm/fwd.hpp
        Linking/include/glm/geometric.hpp
        Linking/include/glm/glm.hpp
        Linking/include/glm/integer.hpp
        Linking/include/glm/mat2x2.hpp
        Linking/include/glm/mat2x3.hpp
        Linking/include/glm/mat2x4.hpp
        Linking/include/glm/mat3x2.hpp
        Linking/include/glm/mat3x3.hpp
        Linking/include/glm/mat3x4.hpp
        Linking/include/glm/mat4x2.hpp
        Linking/include/glm/mat4x3.hpp
        Linking/include/glm/mat4x4.hpp
        Linking/include/glm/matrix.hpp
        Linking/include/glm/packing.hpp
        Linking/include/glm/trigonometric.hpp
        Linking/include/glm/vec2.hpp
        Linking/include/glm/vec3.hpp
        Linking/include/glm/vec4.hpp
        Linking/include/glm/vector_relational.hpp
        Linking/include/KHR/khrplatform.h
        Linking/include/stb/stb_image.h
        Linking/include/ft2build.h
        ProgettoInformaticaGrafica/lib/stb.cpp
        ProgettoInformaticaGrafica/src/algorithms/bounds.cpp
        ProgettoInformaticaGrafica/src/algorithms/bounds.h
        ProgettoInformaticaGrafica/src/algorithms/states.hpp
        ProgettoInformaticaGrafica/src/entities/movingentity.cpp
        ProgettoInformaticaGrafica/src/entities/movingentity.h
        ProgettoInformaticaGrafica/src/graphics/models/box.hpp
        ProgettoInformaticaGrafica/src/graphics/models/cube.hpp
        ProgettoInformaticaGrafica/src/graphics/models/gun.hpp
        ProgettoInformaticaGrafica/src/graphics/models/lamp.hpp
        ProgettoInformaticaGrafica/src/graphics/models/modelarray.hpp
        ProgettoInformaticaGrafica/src/graphics/models/sphere.hpp
        ProgettoInformaticaGrafica/src/graphics/glmemory.hpp
        ProgettoInformaticaGrafica/src/graphics/light.cpp
        ProgettoInformaticaGrafica/src/graphics/light.h
        ProgettoInformaticaGrafica/src/graphics/material.cpp
        ProgettoInformaticaGrafica/src/graphics/material.h
        ProgettoInformaticaGrafica/src/graphics/mesh.cpp
        ProgettoInformaticaGrafica/src/graphics/mesh.h
        ProgettoInformaticaGrafica/src/graphics/model.cpp
        ProgettoInformaticaGrafica/src/graphics/model.h
        ProgettoInformaticaGrafica/src/graphics/modelArray.hpp
        ProgettoInformaticaGrafica/src/graphics/shader.cpp
        ProgettoInformaticaGrafica/src/graphics/shader.h
        ProgettoInformaticaGrafica/src/graphics/text.cpp
        ProgettoInformaticaGrafica/src/graphics/text.h
        ProgettoInformaticaGrafica/src/graphics/texture.cpp
        ProgettoInformaticaGrafica/src/graphics/texture.h
        ProgettoInformaticaGrafica/src/imgui/imconfig.h
        ProgettoInformaticaGrafica/src/imgui/imgui.cpp
        ProgettoInformaticaGrafica/src/imgui/imgui.h
        ProgettoInformaticaGrafica/src/imgui/imgui_demo.cpp
        ProgettoInformaticaGrafica/src/imgui/imgui_draw.cpp
        ProgettoInformaticaGrafica/src/imgui/imgui_impl_glfw.cpp
        ProgettoInformaticaGrafica/src/imgui/imgui_impl_glfw.h
        ProgettoInformaticaGrafica/src/imgui/imgui_impl_opengl3.cpp
        ProgettoInformaticaGrafica/src/imgui/imgui_impl_opengl3.h
        ProgettoInformaticaGrafica/src/imgui/imgui_internal.h
        ProgettoInformaticaGrafica/src/imgui/imgui_tables.cpp
        ProgettoInformaticaGrafica/src/imgui/imgui_widgets.cpp
        ProgettoInformaticaGrafica/src/imgui/imstb_rectpack.h
        ProgettoInformaticaGrafica/src/imgui/imstb_textedit.h
        ProgettoInformaticaGrafica/src/imgui/imstb_truetype.h
        ProgettoInformaticaGrafica/src/imgui/main.cpp
        ProgettoInformaticaGrafica/src/io/camera.cpp
        ProgettoInformaticaGrafica/src/io/camera.h
        ProgettoInformaticaGrafica/src/io/joystick.cpp
        ProgettoInformaticaGrafica/src/io/joystick.h
        ProgettoInformaticaGrafica/src/io/keyboard.cpp
        ProgettoInformaticaGrafica/src/io/keyboard.h
        ProgettoInformaticaGrafica/src/io/mouse.cpp
        ProgettoInformaticaGrafica/src/io/mouse.h
        ProgettoInformaticaGrafica/src/physics/environment.cpp
        ProgettoInformaticaGrafica/src/physics/environment.h
        ProgettoInformaticaGrafica/src/physics/rigidbody.cpp
        ProgettoInformaticaGrafica/src/physics/rigidbody.h
        ProgettoInformaticaGrafica/src/scenes/basescene.cpp
        ProgettoInformaticaGrafica/src/scenes/basescene.h
        ProgettoInformaticaGrafica/src/scenes/menu.cpp
        ProgettoInformaticaGrafica/src/scenes/menu.h
        ProgettoInformaticaGrafica/src/scenes/scene.cpp
        ProgettoInformaticaGrafica/src/scenes/scene.h
        ProgettoInformaticaGrafica/src/gamescene.cpp
        ProgettoInformaticaGrafica/src/gamescene.h
        ProgettoInformaticaGrafica/src/glad.c
        ProgettoInformaticaGrafica/src/main.cpp
        ProgettoInformaticaGrafica/src/scenemanager.cpp
        ProgettoInformaticaGrafica/src/scenemanager.h)
